--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,60 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="125dp"
-        android:background="#3C3A3A" />
+    android:orientation="vertical"
+    android:background="#CCC8C8">
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="31dp" />
+        android:layout_height="33dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:text="@string/lblogin" />
+    <android.support.design.card.MaterialCardView
+        android:layout_width="300dp"
+        android:layout_height="500dp"
+        app:cardCornerRadius="30dp">
 
-    <EditText
-        android:id="@+id/login"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:inputType="text" />
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="20dp" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="60dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:text="@string/lbsenha"/>
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                app:srcCompat="@drawable/aluno" />
 
-    <EditText
-        android:id ="@+id/senha"
-        android:layout_width ="200dp"
-        android:layout_height ="wrap_content"
-        android:inputType ="textPassword" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="31dp" />
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="28dp" />
+            <!--<TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:text="@string/lblogin" />-->
 
-    <Button
-        android:id="@+id/btentrar"
-        android:layout_width="570px"
-        android:layout_height="wrap_content"
-        android:background="@drawable/custom_btn_entrar"
-        android:textSize="20dp"
-        android:textColor="#FFFFFF"
-        android:text="@string/btentrar" />
+            <EditText
+                android:id="@+id/login"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/user"
+                android:drawablePadding="10dp"
+                android:paddingLeft="10dp"
+                android:hint="Login"
+                android:inputType="text" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
+            <!--<TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:text="@string/lbsenha"/>-->
+
+            <EditText
+                android:id ="@+id/senha"
+                android:layout_width ="200dp"
+                android:layout_height ="wrap_content"
+                android:drawableLeft="@drawable/lock"
+                android:drawablePadding="10dp"
+                android:paddingLeft="10dp"
+                android:hint="Senha"
+                android:inputType ="textPassword" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="28dp" />
+
+            <Button
+                android:id="@+id/btentrar"
+                android:layout_width="570px"
+                android:layout_height="wrap_content"
+                android:background="@drawable/custom_btn_entrar"
+                android:textSize="20dp"
+                android:textColor="#FFFFFF"
+                android:text="@string/btentrar" />
+
+
+        </LinearLayout>
+
+
+
+
+    </android.support.design.card.MaterialCardView>
+
+
+
+
 
     <!--<Button
         android:id="@+id/btnovoalu"
@@ -63,14 +107,5 @@
         android:background="#3F51B5"
         android:textColor="#FFFFFF"
         android:text="NOVO ALUNO" />-->
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="43dp" />
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="308dp"
-        android:background="#686666" />
 
 </LinearLayout>
