--- a/app/src/main/res/layout/activity_upt_dis.xml
+++ b/app/src/main/res/layout/activity_upt_dis.xml
@@ -58,29 +58,39 @@
         android:layout_width = "200dp"
         android:layout_height = "wrap_content"
         android:inputType = "text" />
-    <Button
-        android:id = "@+id/btalterardis"
-        android:layout_width = "200dp"
-        android:layout_height = "wrap_content"
-        android:background="#A0140A"
-        android:textColor="#FFFFFF"
-        android:text = "@string/btalterardis" />
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="16dp" />
+        android:layout_height="11dp" />
 
-    <Button
-        android:id = "@+id/btexcluirdis"
-        android:layout_width = "200dp"
-        android:layout_height = "wrap_content"
-        android:background="#A0140A"
-        android:textColor="#FFFFFF"
-        android:text = "@string/btexcluirdis" />
-
-    <Space
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="16dp" />
+        android:layout_height="90dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <Button
+            android:id = "@+id/btalterardis"
+            android:layout_width = "95dp"
+            android:layout_height = "wrap_content"
+            android:background="#A0140A"
+            android:textColor="#FFFFFF"
+            android:text = "@string/btalterardis" />
+
+        <Space
+            android:layout_width="10dp"
+            android:layout_height="47dp" />
+
+        <Button
+            android:id = "@+id/btexcluirdis"
+            android:layout_width = "95dp"
+            android:layout_height = "wrap_content"
+            android:background="#A0140A"
+            android:textColor="#FFFFFF"
+            android:text = "@string/btexcluirdis" />
+
+    </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
